2011-06-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_tags.php
	operation/agentes/estado_monitores.php: Tooltip with module tag
	information in this view.

2011-06-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager_editor_common.php
	godmode/agentes/configurar_agente.php
	godmode/agentes/module_manager_editor.php: Changed tag assigment
	interface inside module editor.

2011-06-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events_list.php: Added tag information in this 
	view.

2011-06-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/tag/edit_tag.php: Comma characters are erased 
	during tag creation/update.

2011-06-08  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql: Added support for event tags.

2011-06-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_modules.php
	include/functions_tags.php: Support for policy's tag functionality.

2011-06-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/massive/massive_edit_modules.php: Tags editor inside massive 
	operations.

2011-06-07 Javier Lanz <javier.lanz@artica.es>

	* operation/events/events_list.php: Added rawurlencode and io_safe_input
	where they were necessary

2011-06-07  Junichi Satoh  <junichi@rworks.jp>

	* operation/agentes/datos_agente.php: Improved filter. It allows
	to select 'Specify time range' and search string.

2011-06-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/ver_agente.php: Added callback function
	for JQuery requests.

2011-06-06  Dario Rodriguez  <dario.rodriguez@artica.es>

	* godmode/servers/manage_recontask.php
	godmode/servers/modificar_server.php
	godmode/menu.php: Changed old name functions to 4.0v.

2011-06-06  Dario Rodriguez  <dario.rodriguez@artica.es>

	* godmode/servers/manage_recontask.php: User with flag AW can manage recon
	task, only for their group.