@@ -1,0 +1,33 @@
+<?php
+
+// Pandora FMS - http://pandorafms.com
+// ==================================================
+// Copyright (c) 2005-2011 Artica Soluciones Tecnologicas
+// Please see http://pandorafms.org for full contribution list
+
+// This program is free software; you can redistribute it and/or
+// modify it under the terms of the  GNU Lesser General Public License
+// as published by the Free Software Foundation; version 2
+
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+	/* Function that includes all graph dependencies */
+	function include_graphs_dependencies($home_url = '', $serialize_ttl = 1) {
+		global $ttl;
+		global $homeurl;
+		
+		$ttl = $serialize_ttl;
+		$homeurl = $home_url;
+		
+		include_once($homeurl . 'include/functions.php');
+		include_once($homeurl . 'include/functions_html.php');
+		
+		include_once($homeurl . 'include/graphs/functions_fsgraph.php');
+		include_once($homeurl . 'include/graphs/functions_gd.php');
+		include_once($homeurl . 'include/graphs/functions_utils.php');
+	}
+	
+?>
